# djangify-package

./: .gitignore  README.md  pyproject.toml
sample/: django_manage.py  do_stuff.py  models.py
sample/migrations/: 0001_initial.py
